# rgz-transport

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rgz-derive/: Cargo.toml
crates/rgz-derive/src/: lib.rs
crates/rgz-msgs/: Cargo.toml  build.rs
crates/rgz-msgs/src/: gz.msgs.rs
crates/rgz-transport/: Cargo.toml
crates/rgz-transport-legacy/: Cargo.toml
crates/rgz-transport-legacy/examples/: publisher.rs
crates/rgz-transport-legacy/src/: lib.rs  transport.rs
crates/rgz-transport-legacy/src/discovery/: store.rs
crates/rgz-transport-legacy/src/dispatcher/: mod.rs  subscription.rs
crates/rgz-transport-legacy/src/node/: mod.rs  options.rs  shared.rs
crates/rgz-transport-legacy/src/utils/: topic.rs
crates/rgz-transport/benches/: transport_perf.rs
crates/rgz-transport/examples/: lidar_node.rs  requester.rs  responser.rs  subscriber.rs
crates/rgz-transport/src/: actor.rs  api.rs  config.rs  error.rs  lib.rs  metrics.rs  state.rs  transport.rs
crates/rgz-transport/src/discovery/: discovery.rs  mod.rs  store.rs
crates/rgz-transport/src/dispatcher/: response.rs  store.rs
crates/rgz-transport/src/node/: node.rs  shared.rs
crates/rgz-transport/src/utils/: env.rs  net.rs
crates/rgz-transport/tests/: issue23_state_model_tests.rs
docs/: dependency-upgrade-plan.md  design-rfc-template.md  rfc-20260305-node-event-loop-reliability.md  rfc-20260307-transport-state-machine.md
docs/issues/: issues.yaml  labels.yaml
scripts/: create_issues.sh
