[package]
name = "rgz-transport"
version = "0.2.0"
edition = "2024"
description = "Async transport runtime for rgz (new v2 implementation)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NekoCool/rgz-transport"

[features]
default = []
network-tests = []

[dependencies]
rgz-msgs = { path = "../rgz-msgs", version = "0.1.1" }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
